Fixed z-index of inputs with is-invalid; Closes #8

--- a/assets/Form.css
+++ b/assets/Form.css
@@ -47,6 +47,19 @@ textarea.code {
 
 
 /**
+ * Issue #8 - Inputs with is-invalid were over TomSelect dropdowns
+ */
+.input-group > .form-control:not(:focus).is-invalid,
+.input-group > .form-floating:not(:focus-within).is-invalid,
+.input-group > .form-select:not(:focus).is-invalid,
+.was-validated .input-group > .form-control:not(:focus):invalid,
+.was-validated .input-group > .form-floating:not(:focus-within):invalid,
+.was-validated .input-group > .form-select:not(:focus):invalid {
+	z-index: auto !important;
+}
+
+
+/**
  * ====================================
  * Modals
  * ====================================
